vlib/v/checker/tests/sum_type_exists.out
vlib/v/checker/tests/sum_type_exists.vv:1:22: error: unknown type `Inexistent`
    1 | type Miscellaneous = Inexistent | Nope | int
      |                      ~~~~~~~~~~